src/components/metadata/styles/metadata.scss
@use '../../../styles/extends';
@use '../../../styles/variables' as variables;

.kui-theme--light {
  --color-metadata-bg: #{variables.$grey-100};
  --color-metadata-preview-bg: #{variables.$grey-200};
  --color-metadata-kind-token-bg: #{variables.$grey-300};
  --color-plot-bg: #{variables.$white-400};
  --color-button-plot: #{variables.$blue-900};
  --color-button-plot-hovered: #{variables.$blue-900};
  --color-button-text: #{variables.$white-0};
}

.kui-theme--dark {
  --color-metadata-bg: #{variables.$slate-300};
  --color-metadata-preview-bg: #{variables.$slate-800};
  --color-metadata-kind-token-bg: #{variables.$black-600};
  --color-plot-bg: #{variables.$slate-700};
  --color-button-plot: #{variables.$blue-900};
  --color-button-plot-hovered: #{variables.$blue-900};
  --color-button-text: #{variables.$white-0};
}

.pipeline-metadata {
  @extend %sidebar;

  position: absolute;
  top: -1px; /* Avoids pixel rounding gaps */
  right: -1px;
  bottom: -1px;
  z-index: variables.$z-index-metadata-panel;
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: variables.$metadata-sidebar-width-open;
  overflow: hidden auto;
  background: var(--color-metadata-bg);
  border-left: 1px solid var(--color-border-line);
  transform: translateX(100%);
  transition: transform ease 0.4s;

  &--visible {
    transform: translateX(0);
  }

  @media print {
    display: none;
  }
}

.pipeline-metadata__close-button {
  position: absolute;
  top: 2px;
  right: -14px;

  &,
  & svg {
    width: 24px;
    height: 24px;
  }
}

.pipeline-metadata__label,
.pipeline-metadata__row {
  margin: auto 36px 2.285em;
}

.pipeline-metadata__header {
  display: flex;
  justify-content: space-between;
}

.pipeline-metadata__header-toolbox {
  position: relative;
  display: flex;
  flex-direction: column-reverse;
  justify-content: space-between;
  margin: 3.2em 3.6em;
  padding-right: 24px;
}

.pipeline-metadata__icon {
  display: inline-block;
  flex-grow: 0;
  flex-shrink: 0;
  width: 28px;
  height: 28px;
  margin: 0.05em 0.55em 0 -0.3em;
  fill: var(--color-text);
}

.pipeline-metadata__header-toolbox .pipeline-toggle-label {
  font-size: 1.4em;
}

.pipeline-metadata__title {
  flex-grow: 1;
  margin: 0;
  font-weight: normal;
  font-size: 1.8em;
  line-height: 1.6;
  word-break: break-word;
}

.pipeline-metadata__list {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  margin: 0;
}

.pipeline-metadata__label {
  margin-bottom: 0.572em;
  font-size: 1.3em;
  font-weight: normal;
  opacity: 0.65;
  user-select: none;
}

.pipeline-metadata__row {
  font-size: 1.4em;
  margin-top: 0.572em;
}

.pipeline-metadata__value {
  display: inline;
  flex-grow: 0;
  margin-right: auto;
  line-height: 1.5;
  word-break: break-word;
  white-space: pre-wrap;
}

.pipeline-metadata__value--kind-type,
.pipeline-metadata__value--kind-path {
  display: block;
  overflow: hidden;
  direction: rtl;
  white-space: nowrap;
  text-align: left;
  text-overflow: ellipsis;
}

.pipeline-metadata__value--kind-token {
  display: inline-block;
  padding: 0.18em 0.6em 0.2em;
  font-weight: 600;
  background: var(--color-metadata-kind-token-bg);

  code & {
    padding: 0.4em 0.8em;
    font-weight: normal;
    font-size: 0.85em;
    font-family: variables.$font-monospace;
  }
}

.pipeline-metadata__value-list-expand {
  display: block;
  margin: 0.6em 0 0;
  padding: 0 0 0.12em;
  color: var(--color-text);
  font-size: 0.96em;
  background: none;
  border: 0;
  border-bottom: 1px solid transparent;
  cursor: pointer;
  opacity: 0.45;
  appearance: none;

  &:hover {
    border-bottom-color: var(--color-text);
    opacity: 0.55;
  }
}

.pipeline-metadata__value-list--no-inline {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.pipeline-metadata__value-list--no-inline li {
  position: relative;
  margin-left: 1em;

  &::before {
    position: absolute;
    margin-left: -1em;

    // For small square bullets
    content: '▪';
  }
}

$list-inline-spacing: 0.2em;

.pipeline-metadata__value-list--inline {
  margin: 0 (-$list-inline-spacing * 1.5);
  padding: 0;
  list-style: none;

  li {
    display: inline;
    margin: $list-inline-spacing $list-inline-spacing * 1.5;
  }
}

.pipeline-metadata__value-list--commas li:not(:last-child)::after {
  content: ', ';
}

.pipeline-metadata__plot {
  display: flex;
  height: 300px;
  cursor: pointer;
}

.pipeline-metadata__plot-image-container {
  height: 100%;
  position: relative;
  width: 100%;
}

.pipeline-metadata__plot-image {
  width: 100%;
}

.pipeline-metadata__plot-image--expanded {
  height: 100%;
  left: 50%;
  position: absolute;
  transform: translateX(-50%);
}

.pipeline-metadata__properties {
  flex-grow: 1;
  height: 0;
  margin-top: auto;
  overflow-y: auto;
}

.pipeline-metadata__link {
  @extend %button;

  align-items: center;
  background-color: var(--color-button-plot);
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 0;
  z-index: 1;

  &:hover {
    background-color: var(--color-button-plot-hovered);
  }
}

.pipeline-metadata__link-icon {
  width: 1.9em;
  height: 1.9em;
  margin: 0 0.8em 0 0;
  fill: var(--color-button-text);
}

.pipeline-metadata__link-text {
  margin: 18px 0;
  color: var(--color-button-text);
  font-size: 1.6em;
}

.pipeline-metadata__object {
  .pretty-json-container {
    font-family: variables.$font-monospace;
    font-size: 0.87em;
  }
}

.pipeline-metadata__preview {
  background: var(--color-metadata-preview-bg);
  height: 300px;
  overflow: scroll;
  position: relative;
}

.pipeline-metadata__preview-json {
  background: var(--color-metadata-preview-bg);
  height: 300px;
  overflow: scroll;
  position: relative;
  padding: 10px 20px 0;
}

.pipeline-metadata__preview-shadow-box-right {
  background-image: linear-gradient(
    to right,
    rgb(0 0 0 / 0%),
    var(--color-metadata-preview-bg)
  );
  border: none;
  content: ' ';
  height: 100%;
  position: absolute;
  right: 0;
  top: 0;
  width: 50px;
}

.pipeline-metadata__preview-shadow-box-bottom {
  background-image: linear-gradient(
    to bottom,
    rgb(0 0 0 / 0%),
    var(--color-metadata-preview-bg)
  );
  border: none;
  content: ' ';
  width: 100%;
  left: 0%;
  position: absolute;
  bottom: 0;
  height: 40px;
}

